fix: add correct animations & correct class names & relayout for firefox & text wrapping

--- a/singolo.css
+++ b/singolo.css
@@ -166,19 +166,14 @@ footer{
     color: #a7150d;
     cursor: cell;
 }
-.logo__name_red:hover{
-    color: #fdfdfd;
-    cursor: cell;
-}
 .logo__name_white{
     margin: 0;
     padding: 0;
     color: white;
 }
-.logo__name_red{
-    margin: 0;
-    padding: 0;
-    color:#f06c64;
+.logo__name_white::after{
+    content: "*";
+    color: red;
 }
 .navMenu__wrapper{
     display: flex;
@@ -281,9 +276,16 @@ footer{
 }
 .card__text{
     margin: 0;
-    padding: 7px 0 0 17px;
-    font-size: 13px;
+    padding: 9px 14px 0px 20px;
+    font-size: 12px;
     line-height: 22px;
+    text-align: justify;
+}
+.card__description{
+    max-width: 300px;
+    max-height: 119px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .design__card{
     margin: 0;
@@ -308,6 +310,10 @@ footer{
 .star__card{
     margin: -7px 0 0 0;
     padding: 0 0 0 5px;
+}
+.card__heading_star{
+    margin: 24px 0 0 20px;
+    padding: 0;
 }
 .portfolio__wrapper{
     display: flex;
@@ -354,9 +360,10 @@ footer{
 }
 .portfolio__imgs{
     width: auto;
-    height: auto;
+    height: 635px;
     margin: 0;
     padding: 1px 0 0 22px;
+    overflow: hidden;
 }
 .portfolio__text{
     position: relative;
@@ -399,6 +406,7 @@ footer{
     font-size: 11px;
     color: #666d89;
     margin: 0 10px 0 0;
+    font-size-adjust:0.5;
 }
 .btn:hover{
     border: 1px solid white;
@@ -479,17 +487,26 @@ p{
     padding: 0;
 }
 .description__name{
+    max-width: 200px;
     margin: 9px 0 0 0;
     padding: 0;
     font-family: "Lato-Black", sans-serif;
     font-size: 18px;
     color: #666d89;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .icon{
     width: 32px;
     height: 32px;
-    margin: 0;
-    padding: 0 0 0 8px;
+    margin: 0 0 0 8px;
+    padding: 0;
+}
+.icon:hover{
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: tomato;
 }
 .contact__1{
     position: relative;
@@ -515,7 +532,7 @@ p{
 .description__info{
     font-family: "Lato-Regular", sans-serif;
     margin: 0;
-    padding: 7px 0 0 0;
+    padding: 7px 3px 0 0;
     font-size: 12px;
     color: #666d89;
     line-height: 22px;
@@ -529,9 +546,6 @@ p{
 .face:hover{
     border-radius: 50% 5%;
     cursor: crosshair;
-}
-.description__name:hover{
-    color: tomato;
 }
 .feedback__block{
     display: flex;
@@ -600,6 +614,7 @@ p{
     color: #f0d8d9;
     letter-spacing: -1px;
     line-height: 29px;
+    text-align: justify;
 }
 h1, p{
     margin: 0;
@@ -648,18 +663,21 @@ a{
     font-size: 12px;
     padding-left: 12px;
     font-family: "Lato-Regular", sans-serif;
+    text-overflow: ellipsis;
 }
 ::-moz-placeholder{
     color: #f0d8d9;
     font-size: 12px;
     padding-left: 12px;
     font-family: "Lato-Regular", sans-serif;
+    text-overflow: ellipsis;
 }
 :-moz-placeholder{
     color: #f0d8d9;
     font-size: 12px;
     padding-left: 12px;
     font-family: "Lato-Regular", sans-serif;
+    text-overflow: ellipsis;
 }
 :-ms-input-placeholder{
     color: #f0d8d9;
@@ -667,6 +685,7 @@ a{
     padding-left: 12px;
     font-family: "Lato-Regular", sans-serif;
     color: transparent;
+    text-overflow: ellipsis;
 }
 :focus:-ms-input-placeholder{
     color: transparent;
@@ -730,6 +749,7 @@ a{
     font-family: "Lato-Regular", sans-serif;
     font-size: 12px;
     line-height: 22px;
+    text-align: justify;
     color: #f0d8d9;
 }
 .textarea_placegolder{
@@ -769,6 +789,7 @@ a:hover{
     margin: 0 4px 0 0;
 }
 .footer__icon:hover{
+    cursor: pointer;
     background-color: #f06c64;
     border-radius: 50%;
 }
